--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+  url_launcher: ^6.1.10   
+  google_fonts: ^4.0.3
+  font_awesome_flutter: ^10.4.0
+  flutter_svg: ^2.0.5
+  provider: ^6.1.2
+  image: ^3.0.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
