--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
     sdk: flutter
   url_launcher: ^6.1.10   
   google_fonts: ^4.0.3
+  image_cropper: ^3.0.1
   font_awesome_flutter: ^10.4.0
   flutter_svg: ^2.0.5
   provider: ^6.1.2
